--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -40,6 +40,68 @@
     "privacy": "Privacy Policy",
     "links": "Links"
   },
+  "Address-Settings": {
+    "advanced-mode-on": "Advanced mode is on"
+  },
+  "Contact": {
+    "contact": "Contact",
+    "paragraph": "Read the <router-link class=\"hyperlink\" :to=\"{ name: 'FAQ' }\">FAQ</router-link> and still have questions? Feel free to get in touch! You'll likely get the fastest response on Discord.",
+    "discord": "<a class=\"hyperlink\" href=\"https://discord.com/invite/uw4y5J2p7C\" target=\"_blank\">Join us</a> on Discord",
+    "twitter": "<a class=\"hyperlink\" href=\"https://twitter.com/UmbraCash\" target=\"_blank\">Follow</a> Umbra on Twitter",
+    "email": "<div>Email us at <a class=\"hyperlink\" href=\"mailto:support@umbra.cash\">support@umbra.cash</a></div>"
+  },
+  "Send": {
+    "sending-disabled": "Sending via Umbra has been temporarily disabled while we perform system maintenance. Please check back soon!",
+    "send": "Send",
+    "connect-your-wallet": "Connect your wallet to send funds",
+    "connect-wallet": "Connect Wallet",
+    "recipient": "Recipient's ENS name or address",
+    "recipient-pkey": "Send using recipient's standard public key",
+    "question-circle": "When checked, the public key used will be the standard public for the provided Ethereum address. The receiver will have to enter their account's private key into this app to withdrawal the funds.",
+    "question-circle-warning": "Don't use this feature unless you know what you're doing.",
+    "learn-more": "Learn more",
+    "select-token": "Select token to send",
+    "token": "Token",
+    "amount": "Amount to send",
+    "summary": "Summary",
+    "sending": "Sending",
+    "fee": "Umbra Fee",
+    "fee-explain": "Transactions on %{chainName} are very cheap, so a small fee is charged to deter spamming the protocol.",
+    "copy-payment-link": "Copy payment link"
+  },
+  "Receive": {
+    "receive": "Receive",
+    "connect-your-wallet": "Connect your wallet to scan for received funds",
+    "connect-wallet": "Connect Wallet",
+    "need-signature": "This app needs your signature to scan for funds you've received",
+    "scan-funds": "Click below to scan for funds you've received",
+    "sign": "Sign",
+    "scan": "Scan",
+    "scan-settings": "Scan Settings",
+    "start-end": "Enter the start or end blocks to use when scanning for events. A blank start block will scan from block zero, and a blank end block will scan through the current block.",
+    "start-block": "Start block",
+    "end-block": "End block",
+    "enter-prv-key": "Enter the private key to use when scanning for events. A blank private key will use the ones generated from your signature.",
+    "prv-key": "Private key",
+    "fetching": "Fetching announcements...",
+    "scanning": "Scanning for funds...",
+    "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient."
+
+  },
+  "Setup": {
+    "setup": "Setup",
+    "connect-wallet": "Connect your wallet to setup your account",
+    "generate-stealth": "Generate and Publish Stealth Keys",
+    "paragraph": " Use the button below to complete the setup process. This will result in two prompts from your wallet: <ol> <li> <span class=\"text-bold\">Sign a message</span> used to generate your Umbra-specific pair of private keys. These keys allow you to securely use Umbra without compromising the private keys of your connected wallet. You do not need to save these keys anywhere! </li> <li> <span class=\"text-bold\">Submit a transaction</span> to save the corresponding public keys on-chain, so anyone can use them to send you stealth payments. </li> </ol>",
+    "setup-account": "Setup account",
+    "complete": "Setup Complete!",
+    "return-to-home": " You may now return <a class=\"hyperlink\" href=\"https://app.umbra.cash/\">home</a> to send or receive funds.",
+    "return-to-home-new": " You may now return <router-link class=\"hyperlink\" :to=%{name}>home</router-link> to send or receive funds."
+  },
+  "Error": {
+    "error": "404",
+    "error-msg": "Oops. Nothing here..."
+  },
   "FAQ": {
     "faq": "Frequently Asked Questions",
     "intro": "Introduction",
@@ -93,7 +155,7 @@
     "crypto-js-answer": " <p> In general, a JavaScript execution environment is not ideal for meeting security requirements. It presents challenges in hiding secret data in memory (e.g. your app-specific private keys) and preventing that data from being written to disk. Using JavaScript also means the underlying cryptography library may be susceptible to things like <a class=\"hyperlink\" href=\"https://en.wikipedia.org/wiki/Timing_attack\" target=\"_blank\">timing attacks</a>. Umbra uses <a class=\"hyperlink\" href=\"https://github.com/paulmillr/noble-secp256k1\" target=\"_blank\">noble-secp256k1</a> for all cryptography, and you can read more about its limitations and mitigation to such vulnerabilities <a class=\"hyperlink\" href=\"https://github.com/paulmillr/noble-secp256k1/#security\" target=\"_blank\">here</a>. </p> <p> However, the Ethereum ecosystem consists of many wallets and applications that rely on JavaScript cryptography and so far there have been no major issues as a result of this, so this approach is likely a suitable trade-off for most users. </p>",
     "tech-details": "Technical details",
     "network-addresses": "What networks is Umbra deployed on and what are the contract addresses?",
-    "network-addresses-answer": " <ul> <li> The core <span class=\"code\">Umbra</span> contract is deployed at <span class=\"code\">{{ deployments.umbra }}</span> on <a :href=\"getEtherscanUrl(deployments.umbra, 1)\" class=\"hyperlink\" target=\"_blank\"> mainnet </a>, <a :href=\"getEtherscanUrl(deployments.umbra, 4)\" class=\"hyperlink\" target=\"_blank\"> Rinkeby </a>, <a :href=\"getEtherscanUrl(deployments.umbra, 10)\" class=\"hyperlink\" target=\"_blank\"> Optimism </a>, <a :href=\"getEtherscanUrl(deployments.umbra, 137)\" class=\"hyperlink\" target=\"_blank\"> Polygon </a>, and <a :href=\"getEtherscanUrl(deployments.umbra, 42161)\" class=\"hyperlink\" target=\"_blank\"> Arbitrum </a> </li> <li> The <span class=\"code\">StealthKeyRegistry</span> is deployed at <span class=\"code\">{{ deployments.registry }}</span> on <a :href=\"getEtherscanUrl(deployments.registry, 1)\" class=\"hyperlink\" target=\"_blank\"> mainnet </a>, <a :href=\"getEtherscanUrl(deployments.registry, 4)\" class=\"hyperlink\" target=\"_blank\"> Rinkeby </a>, <a :href=\"getEtherscanUrl(deployments.registry, 10)\" class=\"hyperlink\" target=\"_blank\"> Optimism </a>, <a :href=\"getEtherscanUrl(deployments.registry, 137)\" class=\"hyperlink\" target=\"_blank\"> Polygon </a>, and <a :href=\"getEtherscanUrl(deployments.registry, 42161)\" class=\"hyperlink\" target=\"_blank\"> Arbitrum </a> </li> </ul>",
+    "network-addresses-answer": " <ul> <li> The core <span class=\"code\">Umbra</span> contract is deployed at <span class=\"code\">%{umbra}</span> on <a href=%{umbraMainnet} class=\"hyperlink\" target=\"_blank\"> mainnet </a>, <a href=%{umbraRinkeby} class=\"hyperlink\" target=\"_blank\"> Rinkeby </a>, <a href=%{umbraOptimism} class=\"hyperlink\" target=\"_blank\"> Optimism </a>, <a href=%{umbraPolygon} class=\"hyperlink\" target=\"_blank\"> Polygon </a>, and <a href=%{umbraArbitrum} class=\"hyperlink\" target=\"_blank\"> Arbitrum </a> </li> <li> The <span class=\"code\">StealthKeyRegistry</span> is deployed at <span class=\"code\">%{StealthKeyRegistry}</span> on <a href=%{registryMainnet} class=\"hyperlink\" target=\"_blank\"> mainnet </a>, <a href=%{registryRinkeby} class=\"hyperlink\" target=\"_blank\"> Rinkeby </a>, <a href=%{registryOptimism} class=\"hyperlink\" target=\"_blank\"> Optimism </a>, <a href=%{registryPolygon} class=\"hyperlink\" target=\"_blank\"> Polygon </a>, and <a href=%{registryArbitrum} class=\"hyperlink\" target=\"_blank\"> Arbitrum </a> </li> </ul>",
     "how-it-works": "How does it work?",
     "how-it-works-answer": "<p class=\"text-bold\">Stealth Address Overview</p> <p>Let’s start with how the Umbra protocol (and more generally, how stealth addresses) work:</p> <p> The recipient has public key <span class=\"code\">P</span> and private key <span class=\"code\">p</span>. The sender generates a random number <span class=\"code\">r</span>, and computes a stealth public key as <span class=\"code\">P_stealth = P * r</span> using elliptic curve multiplication. The sender derives the Ethereum address <span class=\"code\">a_stealth</span> from that public key, and sends funds to it. Thanks to the magic of elliptic curve math, the recipient can generate the private key <span class=\"code\">p_stealth</span> needed to access funds at <span class=\"code\">a_stealth</span> by computing <span class=\"code\">p_stealth = p * r</span>. </p> <p> The first problem to solve is how does the sender get the value <span class=\"code\">r</span> to the receiver? If <span class=\"code\">r</span> was publicly known, observers could determine who funds were sent to by computing <span class=\"code\">P * r</span> for various published <span class=\"code\">P</span> values until the find the stealth address. So <span class=\"code\">r</span> needs to be encrypted. </p> <p> Encryption is done with <a class=\"hyperlink\" href=\"https://en.wikipedia.org/wiki/Elliptic-curve_Diffie%E2%80%93Hellman\" target=\"_blank\" >Elliptic Curve Diffie-Hellman</a > (ECDH), meaning the sender uses the recipient’s public key to encrypt the random number. The encrypted random number gives us the cipertext <span class=\"code\">c</span>. The encrypted random number <span class=\"code\">c</span> and stealth address <span class=\"code\">a_stealth</span> are emitted as an <span class=\"code\">Announcement</span> event from the Umbra contract. ECDH requires the sender to generate an ephemeral private key for encryption, so the ephemeral public key <span class=\"code\">P_ephemeral</span> that the receiver will need to decrypt is also emitted in this event. </p> <p> Now the receiver can scan through all <span class=\"code\">Announcement</span> events and find their funds as follows: </p> <ul> <li> Using their private key <span class=\"code\">p</span> with <span class=\"code\">P_ephemeral</span>, they can compute the ECDH shared secret and decrypt the random number. This will always decrypt to <span class=\"text-italic\">something</span>, but we don’t yet know if it decrypted to the correct number. </li> <li> So the recipient multiplies the decrypted random number by <span class=\"code\">p</span> to get <span class=\"code\">p_stealth</span>, and computes the address controlled by <span class=\"code\">p_stealth</span> </li> <li> If the address controlled by <span class=\"code\">p_stealth</span> matches the <span class=\"code\">a_stealth</span> stealth address included in the <span class=\"code\">Annoucement</span>, the recipient knows that payment was for them and can withdraw it using <span class=\"code\">p_stealth</span>. </li> </ul> <p class=\"text-bold\">Application Private Key</p> <p> As seen from the above explanation, the app will need access to your private key to perform the required math. But when you connect your wallet to an app, the wallet does not share your private key with the app. This is good, because if it did any app you use could steal your funds! So how does Umbra access your key? There’s a few options: </p> <ol> <li> Ask the user to input their wallet’s private key into a form. This is terrible from both a security and user-experience perspective, so we do not do this </li> <li> Generate a random private key and ask you to back it up. This works, but having to backup an app-specific secret is not ideal. </li> <li>Ask the user to sign a message, hash the signature, and generate the key from the signature.</li> </ol> <p> Option 3 solves the issues of otpions 1 and 2, and is the approach used by the app. Similar approaches are used by <a class=\"hyperlink\" href=\"https://loopring.org/#/\" target=\"_blank\">Loopring</a> and <a class=\"hyperlink\" href=\"https://zksync.io/\" target=\"_blank\">zkSync</a> as well, and they were the inspiration for this approach. </p> <p class=\"text-bold\">Scanning for Funds</p> <p> The final consideration has to do with scanning. Because every single <span class=\"code\">Announcement</span> needs to be scanned, it can take a long time to find your finds. </p> <p> One way to speed this up (from the user's perspective) is to delegate scanning to a third-party service and have them notify you when you receive funds. But the scanning service needs your private key <span class=\"code\">p</span> to determine if you received funds, and if they have <span class=\"code\">p</span> they can steal your funds! </p> <p> We can solve this by instead generating two application-specific private keys. One private key will be the viewing private key, <span class=\"code\">p_view</span>, used for encrypting the random number. The other will be the spending private key, <span class=\"code\">p_spend</span>, used for computing the stealth address and accessing those funds. Therefore, our send and receive flow is now modified a bit to: </p> <ol> <li> Recipient has two private keys, <span class=\"code\">p_spend</span> and <span class=\"code\">p_view</span>, and publishes the corresponding public keys <span class=\"code\">P_spend</span> and <span class=\"code\">P_view</span>. </li> <li> The sender generates a random number <span class=\"code\">r</span> and encrypts it using <span class=\"code\">P_view</span> and an ephemeral private key <span class=\"code\">p_ephemeral</span> to generate a ciphertext <span class=\"code\">c</span> </li> <li> The sender computes the stealth address as the address derived from <span class=\"code\">P_stealth = P_spend * r</span> and sends funds to that address </li> <li> The Umbra contract emits <span class=\"code\">c</span>, <span class=\"code\">P_ephemeral</span>, and stealth address <span class=\"code\">a_stealth</span> </li> <li> For each event, the receiver uses <span class=\"code\">p_view</span> and <span class=\"code\">P_ephemeral</span> to decrypt <span class=\"code\">r</span>, then checks if <span class=\"code\">p_stealth = p_spend * r</span> is the private key that controls a_stealth </li> </ol> <p> With this approach, the recipient can provide a third-party scanning service with <span class=\"code\">p_view</span> and <span class=\"code\">P_spend</span>. The service can now check if the recipient has received funds without having the ability to spend them. </p>",
     "spend-view-keys": "What are spending and viewing keys?",
