Replace <a> in pages and layouts with <i18n>
WIP FAQ

--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -35,9 +35,7 @@
     "on": "开",
     "off": "关",
     "about": "简介",
-    "built-by": "<a href=\"https://www.scopelift.co/\" target=\"_blank\" class=\"hyperlink\">ScopeLift</a> 项目",
-    "terms": "Terms of Service",
-    "privacy": "Privacy Policy",
+    "built-by": "{0} 项目",
     "links": "更多"
   },
   "Address-Settings": {
@@ -45,10 +43,13 @@
   },
   "Contact": {
     "contact": "Contact",
-    "paragraph": "Read the <router-link class=\"hyperlink\" :to=\"{ name: 'FAQ' }\">FAQ</router-link> and still have questions? Feel free to get in touch! You'll likely get the fastest response on Discord.",
-    "discord": "<a class=\"hyperlink\" href=\"https://discord.com/invite/uw4y5J2p7C\" target=\"_blank\">Join us</a> on Discord",
-    "twitter": "<a class=\"hyperlink\" href=\"https://twitter.com/UmbraCash\" target=\"_blank\">Follow</a> Umbra on Twitter",
-    "email": "<div>Email us at <a class=\"hyperlink\" href=\"mailto:support@umbra.cash\">support@umbra.cash</a></div>"
+    "paragraph": "Read the {0} and still have questions? Feel free to get in touch! You'll likely get the fastest response on Discord.",
+    "faq": "FAQ",
+    "discord": "{0} on Discord",
+    "join-us": "Join us",
+    "twitter": "{0} Umbra on Twitter",
+    "follow": "Follow",
+    "email": "Email us at {0}"
   },
   "Send": {
     "sending-disabled": "Sending via Umbra has been temporarily disabled while we perform system maintenance. Please check back soon!",
@@ -112,7 +113,9 @@
     "wen-token": "Umbra 有代币吗？",
     "wen-token-answer": "没有。",
     "how-does-it-work": "它是如何工作的？",
-    "how-does-it-work-answer": "<p>下面是对 Umbra 工作原理的简介：</p><ol><li>在设置您的 Umbra 帐户时，用户会签署一条消息。此消息的散列用于生成两个私钥——一个“支出密钥”和一个“查看密钥”。 </li> <li>相应的公钥都作为与您的地址关联的记录在链上发布。</li><li>付款人使用您的地址或 ENS 名称来查找您的两个公钥。另外，付款人生成一个随机数。</li><li>随机数与支出公钥一起使用，以生成一个“隐形地址”来发送资金。与查看公钥使用相同的随机数来加密随机数。</li><li> 使用 Umbra 合约，付款人将资金发送到隐身地址，加密数据作为 <span class=\"code\">Announcement</span>  事件发出。</li><li>接收方扫描 Umbra 合约中的所有 <span class=\"code\">Announcement</span> 事件。对于每个人，他们使用他们的查看密钥来解密随机数，然后将该数字乘以他们的支出密钥来生成隐形私钥。如果隐形私钥控制资金发送到的地址，则这笔款项是给收款人的。</li> <li> 接收方现在可以使用私钥直接将提取资金所需的交易发送到另一个地址，或者签署元交易以让中继器处理取款请求。</li></ol><p>请参阅<span class=\"hyperlink\" @click=\"expandAndScrollToElement('how-does-it-work-technical')\">“技术细节：它是如何工作的？“</span> 部分了解更多详情。</p>",
+    "how-does-it-work-answer": "<p>下面是对 Umbra 工作原理的简介：</p><ol><li>在设置您的 Umbra 帐户时，用户会签署一条消息。此消息的散列用于生成两个私钥——一个“支出密钥”和一个“查看密钥”。 </li> <li>相应的公钥都作为与您的地址关联的记录在链上发布。</li><li>付款人使用您的地址或 ENS 名称来查找您的两个公钥。另外，付款人生成一个随机数。</li><li>随机数与支出公钥一起使用，以生成一个“隐形地址”来发送资金。与查看公钥使用相同的随机数来加密随机数。</li><li> 使用 Umbra 合约，付款人将资金发送到隐身地址，加密数据作为 <span class=\"code\">Announcement</span>  事件发出。</li><li>接收方扫描 Umbra 合约中的所有 <span class=\"code\">Announcement</span> 事件。对于每个人，他们使用他们的查看密钥来解密随机数，然后将该数字乘以他们的支出密钥来生成隐形私钥。如果隐形私钥控制资金发送到的地址，则这笔款项是给收款人的。</li> <li> 接收方现在可以使用私钥直接将提取资金所需的交易发送到另一个地址，或者签署元交易以让中继器处理取款请求。</li></ol>",
+    "how-does-it-work-see-the": "请参阅 {0} 部分了解更多详情。",
+    "how-does-it-work-technical-dtails": "“技术细节：它是如何工作的？“",
     "how-private": "Umbra 有多私密？",
     "how-private-answer": "<p>Umbra 提供了一组有限的隐私保证，在使用协议之前了解它们很重要。 Umbra <span class=\"text-bold\">不像</span> Aztec 或 Zcash 那样提供“完整”隐私。 它只是让任何外部观察者（即任何不是发送者或接收者的人）都无法通过查看接收地址来知道发送者为谁付款。</p><p>重要的是要了解接收方的安全状况不佳（例如，将资金直接发送到公开地址）会消除发送方和接收方的隐私利益。</p><p>如果观察者可以缩小给定交易的潜在接收者的范围，Umbra 的隐私属性也可以被减少。任何有效的公钥都可以用作接收者，任何在以太坊上发送过交易的人都有一个公开的公钥。因此，默认情况下，“匿名集”——交易的潜在接收者的集合——是任何曾经发送过以太坊交易的人！</p><p>在实践中，情况不一定如此，观察者可以通过以下几种方式缩小收件人列表范围：</p><ol><li>大多数用户将使用 Umbra 隐形密钥注册表来发送资金，因此接收者很可能在其中发布了密钥。</li><li>从您的隐身地址提取资金时不小心会减少或使 Umbra 提供的隐私属性无效。请参阅“取款到哪个地址是安全的？”更多细节。取款时请务必小心！</li></ol>",
     "umbra-vs-tornado" : "Umbra 与 TornadoCash 和 Aztec 相比如何？",
@@ -123,7 +126,9 @@
     "is-setup-required": "我是否需要注册帐户？",
     "is-setup-required-answer": " <p> 此步骤在技术上不是必需的，但出于安全原因强烈建议执行此步骤。 为了获取隐形资金，Umbra 应用程序需要您的私钥。 将您钱包的私钥输入任何网站都是非常危险的，我们不希望您这样做！ 通过完成帐户设置过程，您签署了一条消息以生成一组特定于应用程序的 Umbra 私钥。 这更加安全，因为 Umbra 从来没有您钱包的私钥。 </p>",
     "why-setup-again": "为什么我需要重新注册我的帐户？",
-    "why-setup-again-answer": "<p> 如果您在服务仍处于测试阶段（2021 年 10 月之前）时配置了 Umbra 帐户，则需要重新设置。这需要一个签名和一个交易。 </p> <p> 这个额外的设置步骤是由于升级到 Umbra 的隐形密钥注册表系统。旧系统依赖于与用户地址关联的 ENS 解析器上的记录。新系统要简单得多，并使用用户地址和他们的隐秘密钥之间的简单映射。 </p> <p> 新系统是为了响应 Umbra Beta 期间的用户反馈而开发的。旧系统需要多次交易，还要求发送方使用接收方的 ENS 名称，造成困惑。新系统只需要一次交易，发送者可以提供接收者的 ENS 名称或他们的常规以太坊地址。总体而言，新系统的配置和使用都更简单。 </p> <p> 有关此升级的更深入和技术说明，请参阅 Umbra 的 Github 存储库上的 <a href=\"https://github.com/ScopeLift/umbra-protocol/issues/214\" class=\"hyperlink\" target=\"_blank\" >this issue</a > 此问题。 </p>",
+    "why-setup-again-answer": "<p> 如果您在服务仍处于测试阶段（2021 年 10 月之前）时配置了 Umbra 帐户，则需要重新设置。这需要一个签名和一个交易。 </p> <p> 这个额外的设置步骤是由于升级到 Umbra 的隐形密钥注册表系统。旧系统依赖于与用户地址关联的 ENS 解析器上的记录。新系统要简单得多，并使用用户地址和他们的隐秘密钥之间的简单映射。 </p> <p> 新系统是为了响应 Umbra Beta 期间的用户反馈而开发的。旧系统需要多次交易，还要求发送方使用接收方的 ENS 名称，造成困惑。新系统只需要一次交易，发送者可以提供接收者的 ENS 名称或他们的常规以太坊地址。总体而言，新系统的配置和使用都更简单。 </p>",
+    "why-setup-again-answer-issue": "有关此升级的更深入和技术说明，请参阅 Umbra 的 Github 存储库上的 {0}。",
+    "why-setup-again-answer-this-issue": "此问题",   
     "sending-funds": "汇款",
     "why-only-tokens": "为什么只有某些代币可用？",
     "why-only-tokens-answer": "<p> 当您发送 ETH 时，ETH 会直接发送到计算出的隐身地址。该隐身地址现在有 ETH，需要支付 gas，因此接收方可以通过普通发送轻松转移该 ETH。 </p> <p> 当您发送代币时，代币不会直接发送到计算出的隐身地址。如果是这样，您首先需要将 ETH 放入隐身地址，以便支付提取资金的 gas（或使用一些昂贵的 CREATE2 方案）。相反，代币由合约持有，可以通过以下两种方式之一释放： </p> <ol> <li>隐身地址直接调用 <span class=\"code\">withdrawToken()</span> 方法</li> <li> 任何人调用 <span class=\"code\">withdrawTokenOnBehalf()</span> 并从隐身地址传递一个签名。这使得元交易可以与您选择的中继器一起使用。 </li> </ol> <p> 默认情况下，Umbra 应用程序使用来自 Umbra 团队的中继器。管理中继器并确保正确报销交易费用可能会很棘手，因此一开始只启用了几个代币，并且支持的代币列表将被扩展。</p>",
@@ -143,12 +148,20 @@
     "umbra-withdrawal": "Umbra 能否以保护隐私的方式更轻松地提取资金？",
     "umbra-withdrawal-answer": "<p> 是的！这是我们打算在未来进行许多改进的领域，主要是依靠 Umbra 的提款后挂钩功能。 </p> <p>我们计划如何利用这一点的一些示例包括：</p> <ol> <li>直接提取到 Tornado Cash</li> <li>以原子方式将一些代币交换为 ETH，并将其全部发送到新地址</li> <li>将资金直接提取到 DeFi 协议中</li> </ol> <p> 我们可以通过钩子追求许多其他选项，以极大地扩展隐私保护取款选项。 </p>",
     "scan-time": "为什么扫描我的资金需要这么长时间？",
-    "scan-time-answer": "<p> 查找给您发送的付款时，该应用程序需要搜索每一笔发送过的付款并检查它是否属于您。因此，已发送的付款越多，所需的时间就越长。 </p> <p> 这是一个具有各种潜在解决方案的研究问题 ( <a class=\"hyperlink\" href=\"https://ethresear.ch/t/open-problem-improving-stealth-addresses/7438\" target=\"_blank\" >1</a >, <a class=\"hyperlink\" href=\"https://eprint.iacr.org/2021/089.pdf\" target=\"_blank\">2</a>)，我们希望随着时间的推移改进这一点。 </p>",
+    "scan-time-answer": "<p> 查找给您发送的付款时，该应用程序需要搜索每一笔发送过的付款并检查它是否属于您。因此，已发送的付款越多，所需的时间就越长。 </p>",
+    "scan-time-answer-issue": "这是一个具有各种潜在解决方案的研究问题 ({one}{two})，我们希望随着时间的推移改进这一点。",
     "when-withdrawal": "我的资金何时可以提取？",
     "when-withdrawal-answer": "<p>立即地！您收到并可以在发送交易被挖掘后立即提取资金。</p>",
     "security": "安全",
     "audit": "Umbra 是否经过审核？",
     "audit-answer": "<p> 这些 <a class=\"hyperlink\" href=\"https://github.com/ScopeLift/umbra-protocol/tree/master/contracts\" target=\"_blank\" >合约</a > 已通过 ConsenSys Diligence 审计，可在<a class=\"hyperlink\" href=\"https://consensys.net/diligence/audits/2021/03/umbra-smart-contracts/\" target=\"_blank\" >这</a >查阅审计报告。 </p> <p> <span class=\"code\">umbra-js</span>&#32; <a class=\"hyperlink\" href=\"https://github.com/ScopeLift/umbra-protocol/tree/master/umbra-js\" target=\"_blank\" >库</a >&mdash;—负责处理所需的链下逻辑和椭圆曲线操作—已通过Least Authority审计，审计报告可查看 <a class=\"hyperlink\" href=\"https://leastauthority.com/static/publications/LeastAuthority_ScopeLift_Umbra-js_Final_Audit_Report.pdf\" target=\"_blank\" >这里</a >. </p> <p> 链下椭圆曲线操作是 Umbra 业务逻辑的核心部分，所以我们依赖 <a class=\"hyperlink\" href=\"https://paulmillr.com/\" target=\"_blank\">Paul Miller</a> 的简单，零依赖的 <a class=\"hyperlink\" href=\"https://github.com/paulmillr/noble-secp256k1\" target=\"_blank\">noble-secp256k1</a> 库来处理。非常感谢<a class=\"hyperlink\" href=\"https://gitcoin.co/grants/2451/audit-of-noble-secp256k1-cryptographic-library\" target=\"_blank\" >社区</a >帮助，我们能够筹集到足够的资金来支付Cure53 对该库进行审计的费用。您可以在<a class=\"hyperlink\" href=\"https://cure53.de/pentest-report_noble-lib.pdf\" target=\"_blank\">这里</a>阅读审核报告。 </p>",
+    "audit-answer-contract": "这些{contracts}已通过 ConsenSys Diligence 审计，可在{here}查阅审计报告。",
+    "audit-contracts": "合约",
+    "audit-here": "这里",
+    "audit-answer-umrba-js": " {umbra-js} {library} —负责处理所需的链下逻辑和椭圆曲线操作—已通过Least Authority审计，审计报告可查看 {here}。",
+    "audit-library": "库",
+    "audit-answer-umbra-off-chain": "链下椭圆曲线操作是 Umbra 业务逻辑的核心部分，所以我们依赖 {PaulMillers} 的简单，零依赖的 {noble-secp256k1} 库来处理。非常感谢{community}的帮助，我们能够筹集到足够的资金来支付Cure53 对该库进行审计的费用。您可以在{here}。",
+    "audit-community": "社区",
     "umbra-risk": "Umbra 的风险是什么？",
     "umbra-risk-answer": "<p> 和其他货币生态系统中的软件一样，使用 Umbra 也存在风险。这包括严重的软件漏洞，黑客攻击、或其他恶意行为者攻击的风险。任何或所有这些情况都可能导致资金损失。 </p> <p>更具体地说，以下是我们过去在其他项目中看到的一些风险：</p> <ol> <li>合同漏洞使攻击者窃取合同资金或使资金冻结</li> <li>我们的链下代码中的一个错误导致资金被发送到一个不可恢复的地址</li> <li>DNS被劫持以窃取用户的私钥</li> <li>前端代码供应链攻击窃取用户私钥</li> </ol> <p> 我们正在努力防止这些风险，但这并不意味着我们会成功。Umbra 不提供任何担保，您应自担风险下使用它。 </p>",
     "crypto-js": "JavaScript 中的密码学是否安全？",
